sandbox/output
StringCalculator.java:8: error: illegal start of expression
       if (validateResult < =0 ){
                            ^
1 error
